<resources>
    <string name="check_internet_connections">Check Internet Connections</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">User Name :</string>
    <string name="user_address">User Address :</string>
    <string name="my_albums">My Albums</string>
    <string name="search">Search...</string>
    <string name="share">Share</string>
    <string name="app_name">ادمن شق تمره</string>
    <string name="reddit">Reddit</string>
    <string name="rotate">180</string>
    <string name="tamratext">شق تمرة</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up"><![CDATA[Don\'t have account? Sign Up >]]></string>
    <string name="choose_your_category">Choose Category</string>
    <string name="donor">Donor</string>
    <string name="volunteer">Volunteer</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="change_password">Change Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="update">Update</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="select_location">Select Location</string>
    <string name="register">Register</string>
    <string name="already_have_account_signin"><![CDATA[Already have account? SignIn >]]></string>
    <string name="enter_phone_two">Enter Phone Two</string>
    <string name="enter_number_of_meal">Enter Number of meal</string>
    <string name="select_cat">Select Your Category</string>
    <string name="select_gav">Select Your Govern</string>
    <string name="don_rate">donation rate</string>
    <string name="enter_code">Enter Code</string>
    <string name="verify">Verify</string>
    <string name="date_donation">Date donation</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="delivery_address">Delivery Address</string>

    <string name="talab_date">Talab date</string>

    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="change_language">Change Language</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="notes">Write...</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="Select_Your_overn">Select Your Govern</string>
    <string name="donation_rate">donation rate :</string>
    <string name="donation_number">donation number</string>
    <string name="no_account_found">No Account Found</string>
    <string name="order_sended">Order Sended Successfully</string>
    <string name="log_out">Log out</string>
    <string name="donor_name">user name :</string>
    <string name="donor_phone">user Phone :</string>
    <string name="order_date">Order Date :</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="num_of_meal">Num of Meal :</string>
    <string name="number_of_meal">Num of Meal </string>
    <string name="delivery_location">Delivery Location :</string>
    <string name="view_order">View Order</string>
    <string name="order_accepted">Order Accepted Successfully</string>
    <string name="order_not_accept">Order Not Accepted </string>
    <string name="call_volunteer">Call the volunteer to receive meals</string>
    <string name="volunter_name">Volunteer name :</string>
    <string name="volunter_phone">Volunteer phone :</string>
    <string name="delivered">Delivered</string>
    <string name="select_another_one">Select Another One</string>
    <string name="beneficary_name">Beneficiary name :</string>
    <string name="beneficary_phone">Beneficiary phone :</string>
    <string name="donate_now">Donate Now</string>
    <string name="waiting_orders">Waiting orders</string>
    <string name="no_notification_found">No Notification Found!</string>
    <string name="no_beneficary_found_in_this_order_location">No Beneficiary Found in this order location!</string>
    <string name="no_talabat_found">No Talabat Found!</string>
    <string name="no_waiting_orders_found">No Waiting Orders Found!</string>
    <string name="bene_updated">" Beneficiary Updated and "</string>
    <string name="vol_updated">" Volunteer Updated and "</string>
    <string name="donation_date">Donation date :</string>
    <string name="don_time">Donation time :</string>
    <string name="volunteer_time">volunteer time :</string>
    <string name="volunteer_date">volunteer date :</string>
    <string name="date_of_use">Date of use :</string>
    <string name="time_of_use">Timing of use :</string>
    <string name="delete">Delete</string>
    <string name="orders_not_answered_not_found">Orders not answered not found!</string>
    <string name="order_deleted">Order Deleted Successfully</string>
    <string name="unanswered_orders">UnAnswered Orders</string>
    <string name="select_language">Select Language</string>
    <string name="write_your_notes">Write Your Post</string>
    <string name="submit">Submit</string>
    <string name="send_note_success">Your Notes Send To Charity Successfully</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pass_updated_success">Password Updated Successfully</string>
    <string name="no_meals_found">No Meals Found!</string>
    <string name="use_operation">Meal logs</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="new_donation_request">New donation request</string>
    <string name="home">Home</string>
    <string name="donation">Donation</string>
    <string name="notification">Notification</string>
    <string name="history">History</string>
    <string name="talab">Talab</string>
    <string name="meals">Meals</string>
    <string name="talabat">Talabat</string>
    <string name="call_about_phone">Connect With Phone</string>
    <string name="call_about_whatsapp">Connect With WhatsApp</string>
    <string name="call_about_gmail">Connect With Gmail</string>
    <string name="donation_logs">Donation Logs</string>
    <string name="volunteer_logs">Volunteer Logs</string>
    <string name="send_order">Send Order</string>
    <string name="don_num">donation num :</string>
    <string name="select_another_volunteer">select another volunteer</string>
    <string name="view_meal">View Meal</string>
    <string name="order_created_success">Order Created Successfully</string>
</resources>