<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/robotobold"
        android:padding="12dp"
        android:text="@string/choose_your_category"
        android:textColor="@color/orange"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />


    <TextView
        android:id="@+id/btnDonor"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/drawable_corner_btn"
        android:elevation="20dp"
        android:fontFamily="@font/robotobold"
        android:text="@string/donor"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/txtfayrouz"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoose" />

    <TextView
        android:id="@+id/btnVolunteer"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_corner_btn"
        android:elevation="20dp"
        android:gravity="center"
        android:fontFamily="@font/robotobold"
        android:text="@string/volunteer"
        android:textAllCaps="false"
        android:textColor="@color/txtfayrouz"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDonor" />

    <TextView
        android:id="@+id/btnBenefit"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/drawable_corner_btn"
        android:elevation="20dp"
        android:gravity="center"
        android:fontFamily="@font/robotobold"
        android:text="@string/beneficiary"
        android:textAllCaps="false"
        android:textColor="@color/txtfayrouz"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVolunteer" />


</androidx.constraintlayout.widget.ConstraintLayout>