<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/txtFillForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/robotoregular"
        android:text="@string/write_your_notes"
        android:textColor="@color/greentakel"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edNotes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/drawable_corner_edittext"
        android:fontFamily="@font/robotoregular"
        android:hint="@string/notes"
        android:paddingStart="10dp"
        android:gravity="top"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFillForm"
        tools:ignore="Autofill,RtlSymmetry,TextFields" />

    <ImageView
        android:id="@+id/imgPost"
        app:layout_constraintTop_toBottomOf="@+id/edNotes"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/drawable_corner_btn"
        android:fontFamily="@font/robotobold"
        android:gravity="center"
        android:text="@string/submit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>