<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorize.presentation.login.FragmentLogin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTamra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/robotobold"
            android:text="@string/tamratext"
            android:textColor="@color/txtfayrouz"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:rotation="@string/rotate"
            android:src="@drawable/backarrow"
            app:layout_constraintBottom_toBottomOf="@+id/txtTamra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTamra"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="@color/greentakel"
            app:boxBackgroundColor="#25008080"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/fayroze"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo">

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoregular"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:textColor="@color/fayroze"
                android:textColorHighlight="@color/greentakel"
                android:textColorHint="@color/fayroze"
                android:textSize="12sp"
                tools:ignore="Autofill" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layoutDirection="rtl"
            android:hint="@string/enter_password"
            android:textColorHint="@color/greentakel"
            app:boxBackgroundColor="#25008080"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/fayroze"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPhone"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/greenhidden"
            app:passwordToggleTint="@color/green">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoregular"
                android:inputType="textPassword"
                android:textColor="@color/fayroze"
                android:textColorHighlight="@color/greentakel"
                android:textColorHint="@color/fayroze"
                android:textSize="12sp"
                tools:ignore="Autofill,TextFields" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="12dp"
            android:fontFamily="@font/robotobold"
            android:padding="12dp"
            android:visibility="invisible"
            android:text="@string/forgot_password"
            android:textColor="@color/txtfayrouz"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="140dp"
            android:layout_height="46dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/drawable_corner_btn"
            android:elevation="20dp"
            android:fontFamily="@font/robotobold"
            android:gravity="center"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/txtfayrouz"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtForgetPassword" />

        <TextView
            android:id="@+id/txtDontHave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotobold"
            android:padding="12dp"
            android:text="@string/don_t_have_account_sign_up"
            android:textColor="@color/txtfayrouz"
            android:textSize="15sp"
            android:visibility="invisible"
            android:layout_marginBottom="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>